# [m]- blahalhjaljkalkjlajazkljklqjsd qslkdjqs lkdjqsl
#      qmlfkmzkk qskdjfmqslfk mlqzemfj qmlj mldf
#
# date start with a number and can then include anything, they are like comments
# 23/07/2002 - T.o.M.E 2.0.0 aka "Point of No Return"

# bug.txt should follow the exact same format

# special tag to specify the current version
[V]  TomeNET 4.0.0 aka "The Gathering"

27/06/2005
[B]- Fixed a gold duplication exploit.

26/06/2005
[m]- Fixed 'snow' effect from casting noxious cloud 33 times.

22/06/2005
[G]- Fixed digging sandwalls with spells.

15/06/2005
[P]- Removed 4 spr limit from rangers.

13/06/2005
[m]- Changed /val to tell if an account doesn't exists.
[P]- @Ox now works on any equipment item.

11/06/2005
[G]- Added a price cap for trap of ale.
[m]- Fixed kings getting the message "You can't gain more levels until you
     defeat Morgoth, Lord of Darkness!" when they reach level 50.
[m]- Fixed suicide message for kings.
[m]- Added a check for full inventory in telekinesis.

08/06/2005
[B]- Disintegration and rockets won't destroy house doors anymore.
[B]- Don't allow trees on house doors.

06/06/2005
[D]- Added more Potions of Restore Mana in Bordertravel Supplies shop.

04/06/2005
[G]- Rugby ball carrier has orange flickering.
[m]- Added /game stop.
[G]- Players below level 5 can throw the rugby ball now.

03/06/2005
[m]- Changed party id to use u16b instead of byte.
[m]- Increased MAX_PARTIES to 512 from 256.
[G]- Added /play commad for joining a mini-game and putting the player
     automatically in a team. Quitting players will be automatically
     removed from their team.

11/05/2003
[IMOGPDBV]- C. Blue
    Fixed miscellaneous abilities display, saving throw was inaccurate.
    Added several message types to CTRL+O scrollback.
    Fixed colour tables on some operating systems (Linux/DOS).
    Added additional skills and priest schools.
    Added colour animations for mana shield and invulnerability.